--- a/style/style.css
+++ b/style/style.css
@@ -4,14 +4,23 @@
   margin: 0;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+.hide {
+  display: none;
+}
+
 header {
   background: url(../images/desktop/image-hero.jpg) no-repeat;
   background-size: cover;
   padding: 60px 140px;
-}
-
-header .logo {
-  width: 170px;
+  z-index: 0;
 }
 
 header .nav {
@@ -24,6 +33,14 @@ header .nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+header .nav .logo {
+  width: 170px;
+}
+
+header .nav .ham {
+  display: none;
 }
 
 header .nav .nav-links {
@@ -66,6 +83,20 @@ header .nav .nav-links .nav-items:hover:after {
           transform: scaleX(0.5);
 }
 
+header .hidden-nav {
+  z-index: 1;
+  background: black;
+  color: white;
+  padding: 150px 0;
+}
+
+header .hidden-nav .hidden-nav-items {
+  font-size: 1.8em;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 200;
+  padding: 10px 0;
+}
+
 header .head {
   border: 2px solid white;
   width: 50%;
@@ -91,6 +122,28 @@ header .head span {
   font-family: "Josefin Sans", sans-serif;
 }
 
+@media screen and (max-width: 376px) {
+  header {
+    background: url(../images/mobile/image-hero.jpg) no-repeat;
+    background-size: contain;
+    padding: 40px 23px;
+  }
+  header .nav .logo {
+    width: 150px;
+  }
+  header .nav .nav-links {
+    display: none;
+  }
+  header .nav .ham {
+    display: block;
+  }
+  header .head {
+    width: auto;
+    font-size: .8em;
+    margin: 160px 0;
+  }
+}
+
 .hero {
   padding: 140px 140px;
   position: relative;
@@ -105,7 +158,7 @@ header .head span {
   position: absolute;
   background: white;
   padding: 70px 40px 70px 70px;
-  right: 180px;
+  right: 280px;
   bottom: 80px;
   max-width: 490px;
 }
@@ -122,6 +175,27 @@ header .head span {
   font-family: "Alata", sans-serif;
   color: #8c8c8c;
   font-size: .8em;
+}
+
+@media screen and (max-width: 376px) {
+  .hero {
+    padding: 40px 23px;
+  }
+  .hero img {
+    z-index: 0;
+    width: 100%;
+  }
+  .hero .information {
+    position: static;
+    text-align: center;
+    padding: 50px 10px;
+  }
+  .hero .information p {
+    font-size: 1.1em;
+  }
+  .hero .information h1 {
+    font-size: 2.2em;
+  }
 }
 
 .gallery {
@@ -148,7 +222,52 @@ header .head span {
   letter-spacing: 1px;
 }
 
-.gallery .interact .gallery-btn {
+.gallery-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.mobile-gallery-grid {
+  display: none;
+}
+
+.item {
+  position: relative;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
+.item:hover img {
+  opacity: .3;
+}
+
+.item:hover .img-text {
+  color: black;
+}
+
+.item .img-text {
+  position: absolute;
+  left: 30px;
+  max-width: 170px;
+  bottom: 20px;
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 200;
+}
+
+.item img {
+  width: 100%;
+  height: auto;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
+.gallery-btn {
   border: 1px solid black;
   background: white;
   padding: 10px 40px;
@@ -161,50 +280,40 @@ header .head span {
   transition: all 200ms ease-in-out;
 }
 
-.gallery .interact .gallery-btn:hover {
+.gallery-btn:hover {
   background-color: black;
   color: white;
 }
 
-.gallery .gallery-grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-}
-
-.gallery .item {
-  position: relative;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-
-.gallery .item:hover img {
-  opacity: .5;
-}
-
-.gallery .item:hover .img-text {
-  color: black;
-}
-
-.gallery .item .img-text {
-  position: absolute;
-  left: 30px;
-  max-width: 170px;
-  bottom: 20px;
-  color: white;
-  font-family: "Josefin Sans", sans-serif;
-  text-transform: uppercase;
-  font-size: 2rem;
-  font-weight: 200;
-}
-
-.gallery .item img {
-  width: 100%;
-  height: auto;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
+@media screen and (max-width: 376px) {
+  .gallery {
+    padding: 40px 23px;
+  }
+  .gallery .interact {
+    display: block;
+    text-align: center;
+  }
+  .gallery .interact .gallery-btn {
+    display: none;
+  }
+  .gallery .gallery-grid {
+    display: none;
+  }
+  .gallery .mobile-gallery-grid {
+    display: block;
+  }
+  .gallery .mobile-gallery-grid .item {
+    margin-bottom: 20px;
+  }
+  .gallery .mobile-gallery-grid .img-text {
+    max-width: 100px;
+    font-size: 1.4em;
+  }
+  #hidden-btn {
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
 }
 
 footer {
@@ -327,5 +436,44 @@ footer .right-side-footer .social-links .s-link:hover::after {
 
 footer .right-side-footer .coppyright {
   color: #8c8c8c;
+}
+
+@media screen and (max-width: 376px) {
+  footer {
+    padding: 30px 0;
+    text-align: center;
+    display: block;
+  }
+  footer .left-side-footer {
+    width: auto;
+  }
+  footer .left-side-footer .social-links {
+    display: block;
+  }
+  footer .left-side-footer .f-nav {
+    display: block;
+    max-width: none;
+  }
+  footer .left-side-footer .f-nav .nav-items {
+    font-size: 1em;
+  }
+  footer .left-side-footer .f-nav .nav-items:hover::after {
+    -webkit-transform: scalex(0.1);
+            transform: scalex(0.1);
+  }
+  footer .right-side-footer {
+    display: block;
+    width: auto;
+    text-align: center;
+  }
+  footer .right-side-footer .social-links {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.hide {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
